# 3z80

3d_prints/: temp_panel.scad  temp_panel_box.scad
3d_prints/components/: controller_port_holder.scad  mx_switch_mount.scad  power_plug.scad
devkit-fw/: CMakeLists.txt  io.c  io.h  main.c
devkit-go/: .gitignore  flake.nix  go.mod  main.go
devkit-go/ez80/: ez80.go  ez80_test.go  registers.go
devkit-go/rendering/: rendering.go
devkit-rs/: Cargo.toml
devkit-rs/src/: bin.rs  config.rs
devkit-rs/src/protocol/: mod.rs
devkit/src/: devkit_thread.rs  lib.rs
devkit/src/protocol/: mod.rs  write_bytes.rs
docs/: controller.md  devkit.md  parts.md
docs/vga_board/: signals.md
fpga/: README.md  flake.nix
fpga/vga/: build.ys  d_latch.v  d_latch_ts.v  fifo.v
tools/debouncer/: CMakeLists.txt  main.c
z80-assembler/: Cargo.toml
z80-assembler/src/: bin.rs  lib.rs
z80-assembler/src/compiler/: macro.rs  mod.rs  source_provider.rs  utilities.rs
z80-assembler/src/compiler/instructions/: common.rs  errors.rs  inst_arith.rs  inst_bit.rs  inst_ex.rs  inst_exx.rs  inst_im.rs  inst_inout.rs  inst_jump.rs  inst_ld.rs  inst_rot_shift.rs  instr_stack.rs  mod.rs
z80-assembler/src/compiler/macros/: mod.rs
z80-assembler/src/domain/: conditions.rs  enums.rs  mod.rs  register.rs
z80-assembler/src/parser/: errors.rs  mod.rs  token.rs  tokenizer.rs
