[package]
name = "devkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "devkit"
path = "src/lib.rs"

[[bin]]
name = "devkit"
path = "src/bin.rs"

[dependencies]
z80_assembler = { path = "../z80-assembler" }
serialport = "4.2.2"